css/style.css
/* ... */
.praise-card h2 { 
  font-family: "Lato";
  font-weight: normal;
  font-size: 16px;
  line-height: 29px;
  text-align: center;
  color: #1d2928;
  margin: 0;
}
.praise-card h2 b {
  font-weight: 900;
}
img.praise-bottom {
  position: absolute;
  top: -2px;
  left: 0;
  right: 0;
  display: none;
}
img.praise-bottom#praise-bottom-front {
  z-index: 1;
}
img.praise-bottom-mobile {
  position: absolute;
  top: -50px;
  left: -2px;
  right: -2px;
}
img.praise-bottom-tablet {
  display: none;
  position: absolute;
  top: -2px;
  left: 0;
  right: 0;
}
img.praise-bottom-tablet#praise-bottom-tablet-front {
  z-index: 1;
}
section.samples {
  display: flex;
  justify-content: center;
  background-image: url(../img/samples-bg.svg);
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  /*padding-top: 212.52px;*/
  padding-top: 54px;
  padding-bottom: 54px;
  margin-top: -2px;
}
section.samples > div {
  width: 100%;
  max-width: 65rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 30px 0 50px;
}
section.samples > div > h1 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 37px;
  text-align: center;
  color: #272727;
  display: none;
}
section.samples > div > div#readmoresamples {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;

  position: relative;
  max-height: 60vh;
  overflow: hidden;
  transition: max-height 0.5s ease-in-out;
}
section.samples > div > div#readmoresamples.viewmore {
  max-height: 5000px !important;
  /*max-height: none;*/
  overflow: visible;
}
section.samples > div > div#readmoresamples > div {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 2;
  -webkit-mask-position: bottom; 
          mask-position: bottom;
  -webkit-mask-repeat: no-repeat;
          mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
          mask-size: 100% 100%;  
  -webkit-mask-image: linear-gradient(black 25%, transparent 75%);
  mask-image: linear-gradient(black 25%, transparent 75%);
  mask-mode: alpha;
  max-height: 80vh;
  width: 100%;
}
section.samples > div > div#readmoresamples.viewmore > div {
  -webkit-mask-position: none; 
          mask-position: none;
  -webkit-mask-repeat: none;
          mask-repeat: none;
  -webkit-mask-size: none;
          mask-size: none;  
  -webkit-mask-image: none;
  mask-image: none;
  mask-mode: none;
  max-height: none;
}
#viewmoresamples {
  font-family: "Lato";
  font-weight: 900;
  font-size: 17px;
  text-align: center;
  color: #272727;
  border-bottom: 1px solid #272727;
  width: 84px;
  white-space: nowrap;
  cursor: pointer;
}
#viewmoresamples:after {
  content: "View More";
}
#viewmoresamples.expanded:after {
  content: "View Less";
}
section.samples > div > div > div ul li ul {
  list-style: none;
}
section.samples > div > div > div > ul {
  box-sizing: border-box;
  margin-bottom: 0;
  width: calc(50% - 40.5px);
  padding: 0 0 0 20px;
}
section.samples > div > div > div > ul:last-child {
  margin-top: -20px;
}
section.samples > div > div > div > ul li {
  margin-bottom: 16px;
}
section.samples > div > div > div > ul > li {
  font-family: "Lato";
  font-weight: 900;
  font-size: 18px;
  text-align: left;
  color: #0b424e;
  max-width: 100%;
}
section.samples > div > div > div > ul > li {
  list-style-image: url(../img/litri.svg);
}
section.samples > div > div > div > ul:first-child > li:nth-child(3),
section.samples > div > div > div > ul:first-child > li:nth-child(7),
#readmoresamples > div > ul:nth-child(2) > li:nth-child(8) {
  list-style-image: url(../img/litridown.svg);
}
section.samples > div > div > div > ul:last-child > li:first-child {
  list-style-image: url(../img/litrispacer.svg);
}
section.samples > div > div > div > ul:first-child {
  list-style: none;
}
section.samples > div > div > div > ul > li > ul {
  margin-top: 14px;
}
section.samples > div > div > div > ul > li > ul > li  {
  font-family: "Lato";
  font-weight: bold;
  font-size: 16px;
  text-align: left;
  color: #3c3c3c;
}
section.samples > div > div > div > ul > li > ul > li > ul {
  margin-top: 10px;
}
section.samples > div > div > div > ul > li > ul > li > ul > li  {
  font-family: "Lato";
  font-weight: 600;
  font-size: 14px;
  text-align: left;
  color: #3c3c3c;
}
section.samples > div > div > div > ul > li > ul > li > ul > li:not(:last-child)  {
  margin-bottom: 12px;
}
section.excerpt {
  background-color: #145D6E;
  display: flex;
  justify-content: center;
}
section.excerpt.excerptone {
  padding-bottom: 100px;
  margin-bottom: -1px;
}
section.excerpt.excerptone > div > div > div > h2 {
  font-family: "Lato";
  font-size: 24px;
  line-height: 31px;
  font-weight: 700;
  margin: 49px 0 14px;
}
section.excerpt > div {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 55rem;
  z-index: 2;
}
section.excerpt > div > h1 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 47px;
  text-align: center;
  color: #fff;
}
section.excerpt > div > h1:first-child {
  font-size: 37px;
  line-height: 45px;
  margin: 50px 0 0;
}
section.excerpt > div > h3 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 18px;
  line-height: 22px;
  text-align: center;
  color: #fff;
  margin: 6px 0 28px;
}
section.excerpt > div > div {
  background-color: #fff;
  border-radius: 18px;
  /*padding: 60px 90px 100px;*/
  margin: 0 10px;
  padding: 40px 41px;
}
section.excerpt > div > div > h2 {
  font-family: "Lato";
  font-weight: 900;
  font-size: 20px;
  text-align: center;
  color: #272727;
  margin: 0 0 18px;
}
.readmore {
  position: relative;
  max-height: 690px;
  overflow: hidden;
  margin-bottom: 20px;
}
.readmore.expand {
  max-height: 5000px !important;
  transition: max-height 0.5s ease-in-out;
}
/* ... */

